# enph_ai

./: CMakeLists.txt  README.md  package.xml
config/: teleop_twist_joy.yaml  twist_mux.yaml
include/enph_ai/: collision_plugin.h  simple_world_plugin.h
launch/: ackermann_sim.launch  adeept_car_sim.launch  controller.launch  desktop.launch  drive_to_red.launch  enph353_track.launch  find_cube.launch  find_red.launch  i_spy_tank_basic.launch  real.launch  robots.launch  sim.launch
media/materials/scripts/: spa.material  town.material
models/spa_track/: model.config  spa_track.sdf
models/town_track/: model.config  town_track.sdf
models/track/: model.config  model.sdf  track.sdf
nodes/: cmd_vel_to_ackermann_drive.py  drive_point_to_point.py  drive_to_red.py  find_cube.py  find_red.py  line_follow.py  overhead_camera_localization.py
src/: collision_plugin.cpp  simple_world_plugin.cpp
worlds/: 353.world  353_old.world
