<package format="2">
  <name>enph_ai</name>
  <version>0.0.2</version>
  <description>
  Package handles AI navigation for competition robot
  </description>
  <maintainer email="griffin.peirce@alumni.ubc.ca">Griffin Peirce</maintainer>
  <license>BSD</license>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>glob</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
